--- a/기말.html
+++ b/기말.html
@@ -140,7 +140,7 @@
 <body>
   <header>
     <h1>MYTHICAL FIGURE</h1>
-    <img src="image/신화속인물.jpg" alt="MYTHICAL FIGURE 메인 이미지" class="main-hero-image" />
+    <img src="image/신화속인물.jpg" alt="신화속인물.jpg" class="main-hero-image" />
     <div class="social-icons">
       <a href="https://www.instagram.com" target="_blank">
         <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram">
@@ -155,42 +155,42 @@
   </header>
 
   <div class="grid">
-    <a href="https://ko.wikipedia.org/wiki/길가메시" class="card" target="_blank">
+    <a href="https://ko.wikipedia.org/wiki/길가메시.jpg" class="card" target="_blank">
       <img src="image/길가메시.jpg" alt="길가메시">
       <div class="card-content">
         <div class="card-title">길가메시</div>
         <div class="card-description">수메르 신화의 영웅, 불멸을 추구한 우루크의 왕.</div>
       </div>
     </a>
-    <a href="https://ko.wikipedia.org/wiki/손오공" class="card" target="_blank">
+    <a href="https://ko.wikipedia.org/wiki/손오공.jpg" class="card" target="_blank">
       <img src="image/손오공.jpg" alt="손오공">
       <div class="card-content">
         <div class="card-title">손오공</div>
         <div class="card-description">『서유기』의 주인공, 여의봉과 근두운의 주인공.</div>
       </div>
     </a>
-    <a href="https://ko.wikipedia.org/wiki/아서왕" class="card" target="_blank">
+    <a href="https://ko.wikipedia.org/wiki/아서왕.jpg" class="card" target="_blank">
       <img src="image/아서왕.jpg" alt="아서왕">
       <div class="card-content">
         <div class="card-title">아서왕</div>
         <div class="card-description">엑스칼리버의 주인, 정의의 원탁의 기사단 왕.</div>
       </div>
     </a>
-    <a href="https://ko.wikipedia.org/wiki/아킬레우스" class="card" target="_blank">
+    <a href="https://ko.wikipedia.org/wiki/아킬레우스.jpg" class="card" target="_blank">
       <img src="image/아킬레우스.jpg" alt="아킬레우스">
       <div class="card-content">
         <div class="card-title">아킬레우스</div>
         <div class="card-description">트로이 전쟁의 영웅, 아킬레스건으로 유명.</div>
       </div>
     </a>
-    <a href="https://ko.wikipedia.org/wiki/잔_다르크" class="card" target="_blank">
+    <a href="https://ko.wikipedia.org/wiki/잔_다르크.jpg" class="card" target="_blank">
       <img src="image/잔다르크.jpg" alt="잔다르크">
       <div class="card-content">
         <div class="card-title">잔다르크</div>
         <div class="card-description">백년전쟁의 영웅, 프랑스의 성녀이자 전사.</div>
       </div>
     </a>
-    <a href="https://ko.wikipedia.org/wiki/지크프리트" class="card" target="_blank">
+    <a href="https://ko.wikipedia.org/wiki/지크프리트.jpg" class="card" target="_blank">
       <img src="image/지크프리트.jpg" alt="지크프리트">
       <div class="card-content">
         <div class="card-title">지크프리트</div>
